--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>Calculator</title>
 </head>
 <body>
+
+    
+    <audio  src="mixkit-gate-latch-click-1924.wav" id="sound"></audio>
    
     <div class="calsy">
+        <div class="toogle">
+
+        </div>
         <div class="screen">
             <input type="text" id="display">
         </div>
@@ -24,23 +30,23 @@
             <button onclick="append('7')">7</button>
             <button onclick="append('8')">8</button>
             <button onclick="append('9')">9</button>
-            <button onclick="append('*')">*</button>
+            <button onclick="append('*')" id="op">*</button>
            </div>
            <div class="row3">
             <button onclick="append('4')">4</button>
             <button onclick="append('5')">5</button>
             <button onclick="append('6')">6</button>
-            <button onclick="append('-')">-</button>
+            <button onclick="append('-')" id="op">-</button>
            </div>
            <div class="row4">
             <button onclick="append('1')">1</button>
             <button onclick="append('2')">2</button>
             <button onclick="append('3')">3</button>
-            <button onclick="append('+')">+</button>
+            <button onclick="append('+')" id="op">+</button>
            </div>
            <div class="row5">
             <button onclick="append('0')">0</button>
-            <button onclick="append('.')">.</button>
+            <button onclick="append('.')" id="dot">.</button>
             <button id="equal" onclick="cal()">=</button>
           </div> 
         </div>
