--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <audio  src="mixkit-gate-latch-click-1924.wav" id="sound"></audio>
    
     <div class="calsy">
-        <div class="toogle">
-
-        </div>
+        
         <div class="screen">
             <input type="text" id="display">
+        </div>
+        <div class="theme-switch">
+            <input type="checkbox" id="themeToggle"/>
+            <label for="themeToggle" class="toggle-label"></label>
         </div>
         <div class="keys">
            <div class="row1">
